<resources>
    <string name="test"></string>
    <string name="app_name">饲料商城</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tel">14730409666</string>
    <string name="space">\u3000\u3000</string>
    <string name="loding">玩命加载中...</string>
    <string name="maimeng">亲，板块升级中，不要着急啦</string>
    <string name="net_is_eor">网络异常，请检查网络后再试</string>
    <string name="notbuy">亲，您还没有买过任何产品哦！</string>
    <string name="login_out_time">登陆超时</string>
     <string name="please_wait">正在玩命加载中，请稍后...</string>
    <string name="home_more">更多</string>
    <string name="home_search">请输入关键词</string>
    <string name="home_gongqiu">产品</string>
    <string name="home_zhidao">知道</string>
    <string name="home_news">新闻</string>
    <string name="home_zhanhui">展会</string>
    <string name="home_pinpai">品牌</string>
    <string name="home_zhaobiao">招标</string>
    <string name="home_team">团购</string>
    <string name="home_leimu">类目</string>
    <string name="home_siliao">饲料</string>
    <string name="home_shouyao">兽药</string>
    <string name="home_yangzhishebei">养殖设备</string>
    <string name="home_chuqinyangzhi">畜禽养殖</string>
    <string name="home_tianjiaji">添加剂</string>
    <string name="home_yuanliao">原料</string>
    <string name="home_tuijian">精品推荐</string>
    <string name="home_remen">热门市场</string>
    <string name="home_like">猜你喜欢</string>
    <string name="home_ruzhu">最新入驻企业</string>
     <string name="home_layout_rem">产品推荐</string>
     <string name="home_layout_qita">其他产品</string>
    <string name="home_slid_mycenter">个人中心</string>
    <string name="home_slid_about">关于商城</string>
    <string name="home_slid_home">首页</string>
    <string name="home_slid_all">全部分类</string>
    <string name="home_slid_siliao">饲料</string>
    <string name="home_slid_shouyao">兽药</string>
    <string name="home_slid_yanzhi">养殖设备</string>
    <string name="home_slid_xunchu">畜禽养殖</string>
    <string name="home_slid_tianjiaji">添加剂</string>
    <string name="home_slid_yuanliao">原料</string>
    <string name="home_slid_other">其他</string>
    <string name="login_username">会员名</string>
    <string name="login_password">密码</string>
    <string name="login_jizhu">记住密码</string>
    <string name="login_wangji">忘记密码?</string>
    <string name="login_login">登 录</string>
    <string name="login_regist">免费注册</string>
    <string name="login_noaclogin">无账号快捷登录</string>
    <string name="regist_title">注册</string>
    <string name="regist_xinxi">账号信息</string>
    <string name="regist_qiye">企业会员</string>
    <string name="regist_geren">个人会员</string>
    <string name="regist_uername">会员名</string>
    <string name="regist_password">登录密码</string>
    <string name="regist_chognfu">重新输入密码</string>
    <string name="regist_gongsi">公司名称</string>
    <string name="regist_sex_man">先生</string>
    <string name="regist_sex_woman">女士</string>
    <string name="regist_lianxi_people">联系人</string>
    <string name="regist_lianxi_phone">联系电话</string>
    <string name="regist_read">我已阅读并接受</string>
    <string name="regist_tiaokuan">中国饲料商城网服务条款</string>
    <string name="regist_inpu_error">请保证信息完整</string>
    <string name="regist_password_mach">密码应为6-20位的字母或数字</string>
    <string name="regist_password_need_is_one">两次密码不一致</string>
    <string name="regist_phone_isfalse">请输入正确的电话号码</string>
    <string name="regist_ok">注册成功</string>
    <string name="regist_tvlianxifangshi">个人信息</string>
    <string name="regist_tvgongsiinfo">公司信息</string>
    <string name="perfect_info_title">完善信息</string>
    <string name="perfect_info_please">请选择</string>
    <string name="perfect_info_type">公司类型</string>
    <string name="perfect_info_email">电子邮箱</string>
    <string name="perfect_info_qq_number">QQ号码</string>
    <string name="perfect_info_at_address">所在地址</string>
    <string name="perfect_info_address">详细地址</string>
    <string name="perfect_info_commit">提 交</string>
    <string name="perfect_info_tiaoguo">跳过</string>
    <string name="perfect_info_goto_home">进入商城首页</string>
    <string name="search_title">搜索</string>
    <string name="search_clean">清空搜索历史</string>
    <string name="search_history">历史记录</string>
    <string name="search_inpu">请输入你要搜索的信息</string>
    <string name="search_history_is_null">没有搜索记录</string>
    <string name="search_result_zonghe">综合排序</string>
    <string name="search_result_xiaoliang">销量</string>
    <string name="search_result_price">价格</string>
    <string name="search_result_renqi">人气</string>
    <string name="search_result_text1">抱歉，没有找到与“</string>
 	<string name="search_result_text2">”相关的内容。</string>
 	<string name="search_result_text3">建议您：</string>
 	<string name="search_result_text4">•看看文字是否输入有误</string>
 	<string name="search_result_text5">•去掉可能不必要的字词，如“的”，“什么”等。</string>
 	<string name="search_result_text6">•调整更确切的关键词或搜索条件</string>
    <string name="mycenger_title">个人中心</string>
    <string name="mycenger_shoucang_cp">收藏的产品</string>
    <string name="mycenger_shoucang_dp">收藏的的店铺</string>
    <string name="mycenger_zuji">浏览记录</string>
    <string name="mycenger_zhifu">待支付</string>
    <string name="mycenger_fahuo">待发货</string>
    <string name="mycenger_shouhuo">待收货</string>
    <string name="mycenger_pingjia">待评价</string>
    <string name="mycenger_shouhou">退货/售后</string>
    <string name="mycenger_order_list">我的订单</string>
    <string name="mycenger_see_paied">查看已购买的宝贝></string>
    <string name="mycenger_address">地址管理</string>
    <string name="mycenger_qianbao">我的钱包</string>
    <string name="mycenger_xinjian">站内信件</string>
    <string name="mycenger_jifen">我的积分</string>
    <string name="mycenger_fenxiang">我的分享</string>
    <string name="mycenger_fuwu">服务中心</string>
    <string name="mycenger_update">检查更新</string>
    <string name="mycenger_now_version">当前版本</string>
    <string name="mycenger_tuijian">精选推荐</string>
    <string name="mycenter_mimaxiugai">密码修改</string>
    <string name="scproduct_title">我收藏的产品</string>
    <string name="scproduct_tvmoney"></string>
    <string name="scprodcut_tvqxsc">取消收藏</string>
    <string name="scproduct_instore">进入店铺</string>
    <string name="scstore_title">我收藏的店铺</string>
    <string name="myzj_title">我的足迹</string>
    <string name="service_center_kefu_one">客服1</string>
    <string name="service_center_kefu_two">客服2</string>
    <string name="service_center_on_line">在线交谈</string>
    <string name="service_center_qq">拨打电话</string>
    <string name="service_center_title">服务中心</string>
    <string name="service_center_zixun_zhuce">注册咨询</string>
    <string name="service_center_zixun_shangjia">商家咨询</string>
    <string name="service_center_zixun_buy">购买咨询</string>
    <string name="service_center_zixun_zhuanjia">专家咨询</string>
    <string name="service_center_wenti_chaxun">问题查询</string>
    <string name="service_center_wenti_order">订单问题</string>
    <string name="service_center_wenti_regist">注册问题</string>
    <string name="service_center_wenti_wuliu">物流问题</string>
    <string name="service_center_wenti_qita">其他问题</string>
    <string name="mybusinesspartners_all">全部分类</string>
    <string name="mybusinesspartners_title">我的商友</string>
    <string name="mybusinesspartners_itme_way">（分类）</string>
    <string name="mybusinesspartners_itme_tvbeizhu">（备注）</string>
    <string name="mybusinesspartners_itme_tvtel">电话：</string>
    <string name="mybusinesspartners_itme_tvqq"> Q  Q：</string>
    <string name="mybusinesspartners_itme_tvpho">手机：</string>
    <string name="mybusinesspartners_itme_tvxiugai">修改</string>
    <string name="mybusinesspartners_itme_tvdele">删除</string>
    <string name="businesspartnersinfo_titlexiugai">修改商友</string>
    <string name="businesspartnersinfo_titleadd">添加商友</string>
    <string name="businesspartnersinfo_tvway">分类</string>
    <string name="businesspartnersinfo_tvchooseway">请选择分类</string>
    <string name="businesspartnersinfo_tvusername">姓名</string>
    <string name="businesspartnersinfo_tvname">会员名</string>
    <string name="businesspartnersinfo_tvcomputername">公司名称</string>
    <string name="businesspartnersinfo_tvstore">店铺</string>
    <string name="businesspartnersinfo_tvinstore">进入店铺</string>
    <string name="businesspartnersinfo_tvbz">备注</string>
    <string name="businesspartnersinfo_tvaddbz">添加备注</string>
    <string name="businesspartnersinfo_tvre">重置</string>
    <string name="businesspartnersinfo_tvsub">添加</string>
    <string name="qignbao_title">我的钱包</string>
    <string name="qignbao_zonge">总额</string>
    <string name="qignbao_keyong">可用金额:</string>
    <string name="qignbao_tixianjine">提现中金额:</string>
    <string name="qignbao_chaxun">查询明细</string>
    <string name="qignbao_tixian">钱包提现</string>
    <string name="qianbao_query_title">查询明细</string>
    <string name="qianbao_query_all">全部收支</string>
    <string name="qianbao_query_money">余额：</string>
    <string name="money_withdrawal_title">钱包提现</string>
    <string name="money_withdrawal_allmoney">可转出金额</string>
    <string name="money_withdrawal_jine">金额</string>
    <string name="money_withtrawal_textjine">转出金额</string>
    <string name="money_withtrawal_yanzhengma">请输入验证码</string>
    <string name="money_withtrawal_tishi">每笔限制额300元，本日还可转出</string>
    <string name="money_withtrawal_tishi1">次</string>
    <string name="money_withtrawal_ok">确认转出</string>
    <string name="money_withtrawal_tv_yanzhengma">获取验证码</string>
    <string name="moneycar_list_title">银行卡信息</string>
    <string name="bdmoneycar_title">绑定银行卡</string>
    <string name="bdmoneycar_tvtest">仅能绑定您本人的银行卡</string>
    <string name="bdmoneycar_tvusername">开户名</string>
    <string name="bdmoneycar_tvcarid">银行卡卡号</string>
    <string name="bdmoneycar_tvokbd">确定绑定</string>
    <string name="bdmoneycar_tvcarway">开户行</string>
    <string name="bdmoneycar_tvcarwhere">开户地区</string>
    <string name="bdmoneycar_tvcarzhihang">开户支行</string>
    <string name="moneyquery_info_title">收支详情</string>
    <string name="moneyquery_info_id">流水号</string>
    <string name="moneyquery_info_way">类型</string>
    <string name="moneyquery_info_waymoney">收入</string>
    <string name="moneyquery_info_moneyway">付款方式</string>
    <string name="moneyquery_info_time">时间</string>
    <string name="moneyquery_info_money">余额</string>
    <string name="moneyquery_info_beizhu">备注</string>
    <string name="coupons_title">优惠券</string>
    <string name="coupons_tvtext1">消费金额满</string>
    <string name="coupons_tvtext2">元使用</string>
    <string name="coupons_tvtext3">使用类型：</string>
    <string name="coupons_tvtime1">未过期</string>
    <string name="coupons_tvtime2">已过期</string>
    <string name="myinfo_title">我的资料</string>
    <string name="myinfo_head">头像</string>
    <string name="myinfo_name">会员名</string>
    <string name="myinfo_friend">我的商友</string>
    <string name="myinfo_mycard">我的银行卡</string>
    <string name="myinfo_dengji">会员等级</string>
    <string name="myinfo_youhuiquan">优惠券</string>
    <string name="myinfo_email">电子邮箱</string>
    <string name="myinfo_qq">QQ号码</string>
    <string name="about_erweima">扫一扫 即可轻松关注中国饲料商城网公众号</string>
    <string name="about_gongsi">河北迅博网络科技有限公司</string>
    <string name="about_address">地址：</string>
    <string name="about_address_content">河北省石家庄市海悦国际D座801 802</string>
    <string name="about_phone">电话：</string>
    <string name="about_phone_content">400-604-0311</string>
    <string name="about_email">电话：</string>
    <string name="about_email_content">zgslsc@nm1668.com</string>
    <string name="address_diqu">所在地区</string>
    <string name="address_detaile_address">详细地址</string>
    <string name="address_shouhuoren">收货人</string>
    <string name="address_phone_number">手机号</string>
    <string name="address_youbian">邮政编码</string>
    <string name="address_save">保  存</string>
    <string name="possword_tvoldpow">原始密码</string>
    <string name="possword_tvnewpow">新登录密码</string>
    <string name="possword_tvnewpowtwo">再次输入登录密码</string>
    <string name="possword_tvok">保存</string>
</resources>