<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_hui"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText 
            android:id="@+id/address_new_save_et_shouhuoren"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/address_shouhuoren"
            android:textSize="18dp"
			android:textColor="@color/black"            
			android:layout_marginBottom="1dp"
			android:padding="7dp"
			android:singleLine="true"
            />
        <EditText 
            android:id="@+id/address_new_save_et_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/address_phone_number"
            android:textSize="18dp"
			android:textColor="@color/black"            
			android:layout_marginBottom="1dp"
			android:padding="7dp"
			android:singleLine="true"
            />
        <EditText 
            android:id="@+id/address_new_save_et_uzheng"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/address_youbian"
            android:textSize="18dp"
			android:textColor="@color/black"            
			android:layout_marginBottom="1dp"
			android:padding="7dp"
			android:singleLine="true"
            />
        <EditText 
            android:id="@+id/address_new_save_et_diqu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/address_diqu"
            android:textSize="18dp"
			android:textColor="@color/black"            
			android:layout_marginBottom="1dp"
			android:focusable="false"
			android:padding="7dp"
            />
        <EditText 
            android:id="@+id/address_new_save_et_address"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:hint="@string/address_detaile_address"
            android:textSize="18dp"
			android:textColor="@color/black"            
			android:layout_marginBottom="1dp"
			android:gravity="top|left"
			android:padding="7dp"
			android:singleLine="true"
            />
    </LinearLayout>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        />
     <TextView
            android:id="@+id/address_new_save_tv_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_lv_isnull_btn_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/address_save"
            android:textColor="@color/white"
            android:textSize="18dp" />
</LinearLayout>
