<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/login_bg"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/login_et_bg_line"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="1dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_username" />

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/login_username"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/login_et_bg_line"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="1dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_password" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/login_password"
            android:textColor="@color/black"
            android:password="true"
            android:textCursorDrawable="@null"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/login_cb_jizhu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_jizhu"
            android:textColor="@color/home_hui" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/login_tv_wangji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_wangji" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_lv_isnull_btn_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_login"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_regist"
            android:textColor="@color/orn" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/login_tv_noaclogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_noaclogin"
            android:textColor="@color/login_text_gre" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>